# pg_pretty_printer

./: CMakeLists.txt  LICENSE.md  README-CN.md  README.MD  README.md  all_node  install.py  node_struct.py  pg_operator.txt  pg_printer.py  pg_type.txt  pgprint.py  postgres-gdb.py  pprints.py  printer.py  test.sql  tmp  trace
cmake/: FindPostgreSQL.cmake
printer/: __init__.py  node_struct.py  printer.py
test/: readme.md  trace
